# gravel

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  REPOSITORY_SETUP.rst  authors.html  contributing.html  genindex.html  history.html  installation.html  py-modindex.html  pyproject.toml  readme.html  requirements_dev.txt  search.html  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: gh-pages.yml  pytest.yml  python-package.yml
docs/: Makefile  conf.py  gravel.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
docs/_build/html/: contributing.html  genindex.html  gravel.html  index.html  installation.html  modules.html  py-modindex.html  readme.html  searchindex.js  usage.html
docs/source/: api.rst  conf.py  development.rst  examples.rst  index.rst  installation.rst
gravel/: __init__.py  io.py  plot.py  profiles.py  raster.py  vector.py
tests/: __init__.py  test_gravel.py  test_raster.py  test_vector.py
