[project]
name = "gravel"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Takahisa Amano", email = "amano.takahisa@gmail.com"}]
urls = {repository = "https://github.com/amano-takahisa/gravel"}

version = "0.1.2"
requires-python = ">=3.8"

dependencies = [
    "numpy >= 1.22",
    "gdal >= 3.1.1",
    "affine >= 2.3",
    "geopandas >= 0.10",
    "rasterio >= 1.2"
]

[project.optional-dependencies]
plot = [
    "matplotlib >= 3.5",
    "rasterio[plot] >= 1.2"
]

# test = plot + test modules
test = [
    "pytest",
    "matplotlib >= 3.5",
    "rasterio[plot] >= 1.2"
]

# dev = test + dev modules
dev = [
    "pytest",
    "matplotlib >= 3.5",
    "rasterio[plot] >= 1.2",
    "typing-extensions",
    "sphinx",
    "sphinx-rtd-theme",
    "pre-commit",
]

[tool.setuptools.packages.find]
include = ["gravel"]

[tool.black]
line-length = 79
preview = true

[tool.pyright]
venvPath = "."
venv = ".venv_3.10"
typeCheckingMode= "basic"
reportGeneralTypeIssues = false
